k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gdg-lapaz
  labels:
    gdg.service: gdg-lapaz
spec:
  replicas: 5
  selector:
    matchLabels:
      gdg.service: gdg-lapaz
  template:
    metadata:
      labels:
        gdg.service: gdg-lapaz
    spec:
      containers:
      - name: gdg-lapaz
        imagePullPolicy: Always
        resources:
          limits:
            memory: 64Mi
          requests:
            memory: 64Mi
        image: coffeespiller/workshop:v1
    #  hostname: gdg-lapaz
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  labels:
    gdg.service: gdg-lapaz
  name: gdg-lapaz
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    gdg.service: gdg-lapaz
status:
  loadBalancer: {}
