k8s/ingress.yaml
#  to create an ingress controller via HELM
  #  kubectl create secret tls versions-ingress-tls \
  #   --key wildcard.mojix.io.key \
  #   --cert wildcard.mojix.io.crt

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: version-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "false"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Origin, X-Requested-With, Content-Type, Accept, clientid, token"
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  tls:
  - hosts:
    - versions.mojix.io
    #secretName: versions-ingress-tls

  rules:
  - host: versions.mojix.io
    http:
      paths:
      - path: /
        backend:
          serviceName: vizix-version-fetcher
          servicePort: 80
